2008-03-18  Morten Kjeldgaard  <mok@homunculus.local>

	* src/*: add doxygen markup.
	* src/util.c: change /usr/lib to /usr/share/mox
	* src/util.h: several function declarations missing.
	* configure.ac: version bumped to 2.0.2
	
2007-10-26  Morten Kjeldgaard  <mok@homunculus.local>

	* Various syntactic fixes to the code. Eliminate error messages
	  from Ubuntu 7.10 version.

2007-04-26  Morten Kjeldgaard  <mok@ghost.bioxray.dk>

	* Fixed bug where the x coordinate would read wrong if the value
	went into field 30. Reading of ATOM records now faster and less
	error prone. Can handle situation with no spaces between numbers.
	I no longer convert '*' to primes in the atom names of riboses in
	nucleic acids. Release as version 1.3.1
	* Changes in pucker to reflect the above.
	
2007-04-01  Morten  Kjeldgaard  <mok@homunculus.local>

	* Rama was revamped, now using opag to generate code for 
	option parsing. Now accepts --chains option. The routine
	read_matrix_file is now part of the library.

2007-03-28  Morten Kjeldgaard  <mok@ghost.bioxray.dk>

	* Funny, I updated this exactly a year ago! I improved the 
	way libatom categorizes residues. The pucker program was
	given an overhall, and now compiles with g++. Pucker now accepts
	the --chains option, and uses an opag generated option parser.

2006-03-28  Morten Kjeldgaard  <mok@aggemam.stofanet.dk>

	* I had to rename vector.h to mox_vector.h, because it was
	clashing with <vector.h>. This is a problem when using the library
	from C++. Version 1.2.1.

2006-03-21  Morten Kjeldgaard  <mok@ghost.bioxray.dk>
	* Add new program salign, to produce a structural alignment.
	Bump version to 1.2

2006-03-20  Morten Kjeldgaard  <mok@ghost.bioxray.dk>

	* Several changes in library. Header files now usable from C++.
	Output of chain classes modified.  Construction of chains changed,
	so residues do not need to be contiguous in the PDB
	file. Cofactors are often placed at the end of the PDB file but